--- a/public/vanilla/index.html
+++ b/public/vanilla/index.html
@@ -19,7 +19,7 @@
 		<div class="container">
 			<img src="/public/img/clementine_150.png" />
 			<br />
-			<p class="clementine-text">Clementine.js</p>
+			<p class="clementine-text">Voting app</p>
 		</div>
 	
 		<div class="container">
